tests/fixtures/stl/errors/test_kwarg_no_source.stl
// Error: a call-channel argument with no use/get/is source
// expect-error: Expected 'use', 'get', or 'is' to define call argument source.
prompt w { is { s is text<length=4>; } channel { s get s; } return { use s; } }
prompt main { is { o[2] is text<length=4>; } channel { o call w { s s; } ; } return { use o; } }
export main as main;
